# shader-to-video

./: CMakeLists.txt  README.MD  conanfile.txt
ShaderToVideo/include/: screen_quad.h  shader.h  shader_program.h  shader_to_video.h  window.h
ShaderToVideo/src/: screen_quad.cpp  shader.cpp  shader_program.cpp  shader_to_video.cpp  window.cpp
src/: main.cpp
